# dwa_multi_robot

./: CMakeLists.txt  README.md  package.xml  setup.py
config/: dwa_params.yaml  empty.yaml  map_1.yaml  office.yaml
launch/: empty.launch  hospital_section.launch  map_1.launch  office.launch
rviz/: dwa_multi_robot.rviz  office.rviz
slam/: .$office.drawio.bkp  map_1.yaml  office.drawio  office.yaml
src/: main.py  report.py  test.py
src/dwa_multi_robot/: agent.py  astar.py  cubic_spline.py  ultis.py
world/: diff_drive_robot.inc  empty.world  hospital_section.world  map_1.world  obstacles.inc  office.world
